# WriterClassicDevKit

./: README.md  pyproject.toml
src/wclassic_devkit/core/: project.py  wclassic.py
